[package]
name = "caje"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = [
  "rustls-tls",
  "json",
] }
axum = "0.6.20"
miette = { version = "5.10.0", features = ["fancy"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
http = "0.2.9"
lazy_static = "1.4.0"
axum-macros = "0.3.8"
chrono = "0.4.28"
http-cache-semantics = "1.0.1"
hyper = "0.14.27"
