[package]
name = "caje"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = [
  "rustls-tls",
  "json",
] }
axum = "0.6.20"
miette = { version = "5.10.0", features = ["fancy"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
http = "0.2.9"
lazy_static = "1.4.0"
axum-macros = "0.3.8"
chrono = "0.4.28"
http-cache-semantics = "1.0.1"
hyper = "0.14.27"
cacache = { version = "11.6.0", features = [
  "tokio-runtime",
  "mmap",
], default-features = false }
http-serde = "1.1.3"
postcard = { version = "1.0.7", features = ["use-std"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
litefs-rs = { path = "../litefs-rs" }
maud = { version = "0.25.0", features = ["axum"] }
