[package]
name = "litefs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.148"
thiserror = "1.0.49"
# fcntl = { git = "https://github.com/coreyja/fcntl-rs.git", rev = "6bcaa5f" }
tracing = "0.1.37"
